23 Jun 2018
fix: emoticon size
cleanup: avatar and icon display
fix: forums scroll to post

22 Jun 2018
fix: image proxy when using width/height
add: image proxy in AJAX Chat
fix: almost all formating of usernames is format_username()
remove: preview buttons
fix: AJAX Chat not using override_class
replace: log viewer to allow reading gzipped files and sqlerr_log files

18 Jun 2018
disable: additional newsfeeds
remove: binary_operator_spaces from php_cs_fixer
update: function_imdb.php to handle failure
update: uglify.php to create all needed files, instead of copy example files

17 Jun 2018
remove: unneeded var
update: forums display, still incomplete but much better
fix: achievementhistory.php table display
fix: achievementbonus.php
fix: userhistory.php
fix: admin/iphistory.php display

16 Jun 2018
fix: several admin pages issues
change: pre to code to keep bbcode code block from breaking template

14 Jun 2018
fix: tvmaze lookup
add: clear torrent cache button on details page

13 Jun 2018
fix: remove deleted columns from query mytorrents.php
update: guzzle request in function_fanart,php
update: normalize user classes so that adding/removing most classes will not need any code changes
fix: typo
remove: redundant parked() check in forums.php
fix: faq.php output
update: ip logging false by default
update: all requests for ip, except announce and scrape, use the function getip() to facilitate logging ip true/false
fix: calling format_username() with array instead of id

12 Jun 2018
fix: friends.php

9 Jun 2018
fix: typo
update: details.php youtube to match others
fix: imdb lookup
fix: site forcing new users to https
fix: query using incorrect id
fix: classcolors.css overwrite on git pull
fix: classes.js overwrite on git pull
fix: missing ip class_check.php in query
fix: typos
fix: tracker bencode issue, you will need to manually merge this with your include/ann_config.php
update: ssluse for everything, always if using https
fix: announce.php