@@ -31,6 +31,9 @@ GOOGLE_API_KEY=
 ## fanart posters and banners
 FANART_API_KEY=
 
+## The Movie Database API Key
+TMDB_API_KEY=
+
 ## reCAPTCHA V2 keys, both are needed
 RECAPTCHA_SITE_KEY=
 RECAPTCHA_SECRET_KEY=
