@@ -1,187 +1,0 @@
-<?php
-
-$lang = [
-    //Mod admin link
-    'gl_admin' => 'Admincp',
-    'gl_userblocks' => 'User Blocks',
-    'gl_profile' => 'Profil',
-    'gl_logout' => 'Deconectare',
-    'gl_getrss' => 'Get Rss',
-    'gl_donate' => 'Doneaz&#259;',
-    'gl_bet' => 'Bets',
-    'gl_help' => 'Ajutor',
-    'gl_torrent' => 'Torent',
-    'gl_torrents' => 'Torente',
-    'gl_nseeds' => 'Need Seeds',
-    'gl_home' => 'Acas&#259;',
-    'gl_browse' => 'R&#259;sfoieste',
-    'gl_search' => 'Caut&#259;',
-    'gl_upload' => '&#206;ncarc&#259;',
-    'gl_requests' => 'Cereri',
-    'gl_offers' => 'Oferte',
-    'gl_uapp' => 'Aplica&#355;ie upload',
-    'gl_chat' => 'Chat',
-    'gl_credits' => 'Credite',
-    'gl_forums' => 'Forumuri',
-    'gl_tforums' => 'Forumuri Tracker',
-    'gl_bookmarks' => 'Semne de carte',
-    'gl_general' => 'General',
-    'gl_stats' => 'Statistici',
-    'gl_status' => 'Status',
-    'gl_announcements' => 'Anun&#355;urile siteului',
-    'gl_irc' => 'IRC',
-    'gl_wiki' => 'Wiki',
-    'gl_radio' => 'Radio',
-    'gl_tfreak' => 'Torrent Freak',
-    'gl_games' => 'Jocuri',
-    'gl_casino' => 'Casino',
-    'gl_bjack' => 'Blackjack',
-    'gl_arcade' => 'Arcade',
-    'gl_breport' => 'Raporteaz&#259; Bug',
-    'gl_brespond' => 'R&#259;spunde la Bug',
-    'gl_cstaff' => 'Contacteaz&#259; personal',
-    'gl_smessages' => 'Mesaje pentru personal',
-    'gl_member' => 'Membru',
-    'gl_last24' => 'în ultimele 24 de ore',
-    'gl_ausers' => 'Utilizatori activi',
-    'gl_pms' => 'Mesaje',
-    'gl_usercp' => 'User Control Panel',
-    'gl_theme' => 'Teme',
-    'gl_language_select' => 'Limb&#259;',
-    'gl_friends' => 'Prieteni',
-    'gl_rules' => 'Reguli',
-    'gl_faq' => 'Faq',
-    'gl_links' => 'Linkuri',
-    'gl_staff' => 'Personal',
-    'gl_sorry' => 'Ne pare r&#259;u',
-    'gl_flood_msg' => 'Anti-Flood limit in effect - Trebuie s&#259; a&#351;tep&#355;i - ',
-    'gl_catalogue' => 'Catalog',
-    'gl_alerts' => 'Alerte site in prezent:',
-    //a guest user links
-    'gl_login' => 'Autentific&#259;te',
-    'gl_signup' => '&#206;nregistrare',
-    'gl_recover' => 'Recuperare cont',
-    //Alerts
-    'gl_msg_alert' => 'Ave&#355;i %s mesaj',
-    'gl_msg_alerts' => 'e',
-    'gl_staff_message_alert' => 'Ave&#355;i %s mesaj',
-    'gl_staff_message_alerts' => 'e',
-    'gl_staff_message_for' => ' pentru personal!',
-    'gl_staff_message' => 'Mesaj pentru Personal',
-    'gl_staff_message_new' => '',
-    'gl_staff_messages' => 'Mesaje pentru Personal',
-    'gl_staff_message_news' => '',
-    'gl_staff_message_click' => 'Pentru a vedea mesajele personalului, clic pe titlul de mai sus ',
-    'gl_reportmsg_alert' => 'There is %s new report for the staff',
-    'gl_uploadapp_alert' => 'There is %s new uploadapp for the staff',
-    'gl_bugs' => 'Aveti %s bug',
-    'gl_bugss' => 'uri',
-    //blocks
-    'gl_bug_alert' => 'Alert&#259; Bug',
-    'gl_bug_alert1' => 'Un nou bug',
-    'gl_bug_alert2' => 'Hei',
-    'gl_bug_alert3' => 'Clic pe titlul de mai sus pentru a vedea mesajele bug',
-    'gl_temp_demotion' => 'Retrogradat temporar',
-    'gl_temp_demotion1' => 'Retrogradat temporar',
-    'gl_temp_demotion2' => 'Pentru a reveni la clasa normal&#259; pe care ai avut-o, clic pe titlul de mai sus.',
-    'gl_freeleech' => 'FreeLeech Pornit',
-    'gl_freeleech_sb' => 'setat de',
-    'gl_freeleech_u' => 'P&#226;n&#259; la',
-    'gl_freeleech_tg' => 'to go',
-    'gl_crazy_title' => 'w00t A &#238;nceput Ora nebun&#259;!',
-    'gl_crazy_message' => 'Toate torentele sunt',
-    'gl_crazy_message1' => 'FREE',
-    'gl_crazy_message2' => 'si statisticile de upload se ',
-    'gl_crazy_message3' => 'TRIPLEAZ&#194;',
-    'gl_crazy_on' => 'Ora nebun&#259; a pornit',
-    'gl_crazy_' => 'Ora nebun&#259;',
-    'gl_crazy_ends' => 'Se termina &#238;n',
-    'gl_crazy_at' => 'la',
-    'gl_crazy_message4' => 'Ora Nebuna...Toate torentele sunt free',
-    'gl_crazy_message5' => '&#351;i vei primi triplu credit de upload!',
-    'gl_crazy_message6' => '&#238;ncepe &#238;n',
-    'gl_happyhour' => 'Ora Vesel&#259;',
-    'gl_happyhour1' => 'A inceput or&#259; vesel&#259; !',
-    'gl_happyhour2' => 'Orice torent desc&#259;rcat in ora vesel&#259; este free',
-    'gl_happyhour3' => 'Doar in categoria selectat&#259;, clic pe HappyHour de mai sus pentru a vedea categoria',
-    'gl_happyhour4' => 'r&#259;mas din aceast&#259; or&#259; vesel&#259;!',
-    'gl_newpriv' => 'Mesaj Privat Nou',
-    'gl_newmess' => '',
-    'gl_newprivs' => 'Mesaje Private Noi ',    //////for singular&plural
-    'gl_newmesss' => '',                    //////for singular&plural
-    'gl_reports' => 'Raport nou. ',
-    'gl_reports_new' => '',
-    'gl_reportss' => 'Rapoarte noi. ',        //////for singular&plural
-    'gl_reports_news' => '',                //////for singular&plural
-    'gl_reports_report' => 'raport',
-    'gl_reports_reports' => 's',            //////for singular&plural
-    'gl_reports_dealt' => 'Pentru a te ocupa de acesta, ',
-    'gl_reports_click' => 'click pe titlul de mai sus pentru a vedea rapoartele',
-    'gl_uploadapp_new' => 'Aplica&#355;ie upload &#238;n a&#351;teptare',
-    'gl_uploadapp_ua' => 'aplicatie uploader.',
-    'gl_uploadapp_dealt' => 'Pentru a te ocupa de aceasta, ',
-    'gl_uploadapp_click' => 'clic pe titlul de mai sus pentru a vedea aplica&#355;ia',
-    //stdfoot
-    'gl_stdfoot_querys' => 'Interog&#259;ri',
-    'gl_stdfoot_id' => 'ID',
-    'gl_stdfoot_qt' => 'Timp interogare',
-    'gl_stdfoot_qs' => 'Detalii interog&#259;ri',
-    'gl_stdfoot_ysoq' => 'Ar trebui s&#259; optimiza&#355;i aceast&#259; interogare.',
-    'gl_stdfoot_qg' => 'Interogare reu&#351;it&#259;.',
-    'gl_stdfoot_querys_mstat' => 'PHP:',
-    'gl_stdfoot_querys_mstat1' => '&#238;n',
-    'gl_stdfoot_querys_mstat2' => '&#37; Memcached in: ',
-    'gl_stdfoot_querys_mstat3' => 'Hits: ',
-    'gl_stdfoot_querys_mstat4' => '% Ratate: ',
-    'gl_stdfoot_querys_mstat5' => ' % Elemente: ',
-    'gl_stdfoot_querys_page' => 'pagina a fost creat&#259; &#238;n ',
-    'gl_stdfoot_querys_time' => 'ori',
-    'gl_stdfoot_querys_seconds' => 'secunde.',
-    'gl_stdfoot_querys_server' => 'Serverul a fost interogat de ',
-    'gl_stdfoot_querys_time_plural' => 'ori',
-    'gl_stdfoot_querys_time_singular' => 'data',
-    'gl_stdfoot_querys_hits' => 'hits au fost manipulate.',
-    'gl_stdfoot_uptime' => 'Uptime:',
-    'gl_stdfoot_powered' => 'Realizat de ',
-    'gl_stdfoot_using' => 'Using Valid ',
-    'gl_stdfoot_using1' => 'CSS3, XHTML &amp; PHP',
-    'gl_stdfoot_sview' => 'Vizualizare System',
-    'gl_stdfoot_apc' => 'Statistici APC',
-    'gl_stdfoot_memcache' => 'Memcache',
-    'gl_stdfoot_flush' => 'Cur&#259;&#355;&#259; Cache',
-    //statusbar
-    'gl_pstats' => ':: Statistici Personale',
-    'gl_uclass' => 'Clasa utilizatorului',
-    'gl_rep' => 'Reputa&#355;ie',
-    'gl_invites' => 'Invita&#355;ii',
-    'gl_karma' => 'Puncte Bonus',
-    'gl_achpoints' => 'Realiz&#259;ri',
-    'gl_tstats' => ':: Statistici Torent',
-    'gl_shareratio' => 'Ra&#355;ie',
-    'gl_connectable' => 'Conectabil',
-    'gl_userblocks' => ':: Configurare blocuri utilizator',
-    'gl_myblocks' => 'Blocurile mele',
-    'gl_click' => 'Clic aici',
-    'gl_myunlocks' => 'My Unlocks',
-    'gl_hey' => 'Hei',
-    'gl_stdhey' => 'Bun&#259; dimineaţa',
-    'gl_stdhey1' => 'Pranz',
-    'gl_stdhey2' => 'Bun&#259; seara',
-    'gl_stdhey3' => 'Cin&#259;',
-    'gl_stdhey4' => 'Bun&#259; seara',
-    'gl_stdhey5' => 'Ora de culcare',
-    'gl_stdhey6' => 'Noapte bun&#259;',
-    'gl_stdhey7' => 'Hei',
-    'gl_msg_singular' => 'Mesaj nou',
-    'gl_msg_plural' => 'Mesaje noi',
-    'gl_msg_plural_ibl' => 'Noi',
-    'gl_msg_singular_ibl' => 'Nou',
-    'gl_msg_welcome' => 'Bine ai revenit',
-    'gl_uploaded' => '&#206;nc&#259;rcat',
-    'gl_downloaded' => 'Desc&#259;rcat',
-    'gl_act_torrents' => 'Torente active',
-    'gl_seed_torrents' => 'Fi&#351;iere &#238;nc&#259;rcate',
-    'gl_leech_torrents' => 'Fi&#351;iere desc&#259;rcate',
-    'gl_tempdemotion' => 'Se pare c&#259; ai o clas&#259; inferioar&#259;. Clic aici pentru a reveni la normal.',
-    'gl_time_date' => '',
-];
